--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,5 +1,20 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+button {
+	width: 150px;
+	height: 40px;
+	background-color: lightblue;
+	text-align: center;
+	cursor: pointer;
+	border: none;
+	border-radius: 10px;
+}
+
+.active {
+	color: red;
+	font-size: 20px;
 }
