--- a/src/sass/general/_base.scss
+++ b/src/sass/general/_base.scss
@@ -2,11 +2,17 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	font-family: 'Roboto', sans-serif;
+	font-family: "Roboto", sans-serif;
 }
 
 .container {
 	max-width: 1140px;
 	padding: 0 15px;
 	margin: 0 auto;
+}
+
+.wrap {
+	&-dropdown {
+		display: inline-block;
+	}
 }
